ARXIVNG-1109 controllers for compilation, with tests
