# schema/openapi.yaml
@@ -10,13 +10,20 @@ info:
 
 components:
   parameters:
-    upload_id:
-      name: upload_id
+    source_id:
+      name: source_id
       in: path
       description: The upload workspace ID.
       required: true
       schema:
         type: integer
+    checksum:
+      name: checksum
+      in: path
+      description: The checksum of the upload workspace being compiled.
+      required: true
+      schema:
+        type: string
     format:
       name: format
       in: path
@@ -30,18 +37,18 @@ paths:
     get:
       operationId: getServiceStatus
       summary: |
-        Get information about the current status of file management service.
+        Get information about the current status of compilation service.
       responses:
         '200':
           description: OK
         '503':
           description: Service Unavailable
 
-  /{upload_id}:
+  /{source_id}:
     parameters:
-    - $ref: '#/components/parameters/upload_id'
+    - $ref: '#/components/parameters/source_id'
     get:
-      operationId: getCompilationInfo
+      operationId: getCompilationStatus
       description: Return information about all compilations requested for the upload workspace.
       responses:
         '200':
@@ -52,9 +59,10 @@ paths:
                 $ref: 'resources/compilationInfo.json'
 
 
-  /{upload_id}/{format}:
+  /{source_id}/{checksum}/{format}:
     parameters:
-    - $ref: '#/components/parameters/upload_id'
+    - $ref: '#/components/parameters/source_id'
+    - $ref: '#/components/parameters/checksum'
     - $ref: '#/components/parameters/format'
     get:
       responses:
@@ -85,9 +93,10 @@ paths:
               schema:
                 type: string
 
-  /{upload_id}/{format}/log:
+  /{source_id}/{checksum}/{format}/log:
     parameters:
-    - $ref: '#/components/parameters/upload_id'
+    - $ref: '#/components/parameters/source_id'
+    - $ref: '#/components/parameters/checksum'
     - $ref: '#/components/parameters/format'
     get:
       operationId: getCompilationLog
@@ -95,9 +104,10 @@ paths:
         '200':
           description: OK
 
-  /{upload_id}/{format}/product:
+  /{source_id}/{checksum}/{format}/product:
     parameters:
-    - $ref: '#/components/parameters/upload_id'
+    - $ref: '#/components/parameters/source_id'
+    - $ref: '#/components/parameters/checksum'
     - $ref: '#/components/parameters/format'
     get:
       operationId: getCompilationProduct
